adding user models and authentication

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "angular-aria": "^1.5.8",
     "angular-material": "^1.1.0",
     "angular-resource": "^1.5.8",
+    "angular-route": "^1.5.8",
     "body-parser": "^1.15.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
-    "mongoose": "^4.4.7"
+    "mongoose": "^4.4.7",
+    "passport": "^0.3.2"
   }
 }
