--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
     "angular-material": "^1.1.0",
+    "angular-messages": "^1.5.8",
     "angular-resource": "^1.5.8",
     "angular-route": "^1.5.8",
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.0",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "jwt-simple": "^0.5.0",
     "mongoose": "^4.4.7",
-    "passport": "^0.3.2"
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0",
+    "passport-local": "^1.0.0"
   }
 }
